--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Intonarumori</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css?v=1.3" />
   </head>
   <body>
     <main class="app">
@@ -104,6 +104,6 @@
       <a class="pill secondary" href="https://ko-fi.com/miralles" target="_blank" rel="noopener">Invitar a una horchata</a>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=1.3"></script>
   </body>
 </html>
